k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcp-api
  namespace: bcp-parser
spec:
  type: ClusterIP
  selector:
    app: bcp-api
  ports:
    - name: http
      port: 8080
      targetPort: http
