k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcp-frontend
  namespace: bcp-parser
spec:
  type: ClusterIP
  selector:
    app: bcp-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
